<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_header"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_light"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/lash_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lash_service" />

    <CheckBox
        android:id="@+id/epilation_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/epilation_service" />

    <CheckBox
        android:id="@+id/massage_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/massage_service" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/selected_services_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingVertical="10dp"
            android:textColor="@android:color/holo_orange_dark"
            tools:text="@string/selected_services" />

        <ToggleButton
            android:id="@+id/show_calendar_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textOff="@string/show_calendar"
            android:textOn="@string/hide_calendar" />
    </LinearLayout>

    <CalendarView
        android:id="@+id/calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/msg_to_master_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enable_msg"
        android:theme="@style/MySwitch" />

    <EditText
        android:id="@+id/msg_to_master_edit_text"
        android:importantForAutofill="no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:hint="@string/hint_msg"
        android:inputType="text" />

    <Button
        android:id="@+id/send_order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:text="@string/send_order" />

</LinearLayout>